<resources>
    <string name="app_name">Quizzo - LC</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="genre">Genre</string>
    <string name="question">Question</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="option_5">Option 5</string>
    <string name="select_correct_answer">Select Correct Answer</string>
    <string name="enter">Enter</string>
    <string name="practice">Practice</string>
    <string name="add_question">Add Question</string>
    <string name="submit">Submit</string>
    <string-array name="options">
        <item>Option 1</item>
        <item>Option 2</item>
        <item>Option 3</item>
        <item>Option 4</item>
        <item>Option 5</item>
    </string-array>
</resources>