<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddQuestionFragment">

    <EditText
        android:id="@+id/edt_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:hint="@string/genre"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/edt_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/question"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_genre"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/edt_option1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/option_1"
        android:inputType="textPersonName"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_question"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/edt_option2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/option_2"
        android:inputType="textPersonName"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/edt_option1"
        app:layout_constraintStart_toStartOf="@+id/edt_option1"
        app:layout_constraintTop_toBottomOf="@+id/edt_option1" />

    <EditText
        android:id="@+id/edt_option3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/option_3"
        android:inputType="textPersonName"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/edt_option2"
        app:layout_constraintStart_toStartOf="@+id/edt_option2"
        app:layout_constraintTop_toBottomOf="@+id/edt_option2" />

    <EditText
        android:id="@+id/edt_option4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/option_4"
        android:inputType="textPersonName"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/edt_option3"
        app:layout_constraintStart_toStartOf="@+id/edt_option3"
        app:layout_constraintTop_toBottomOf="@+id/edt_option3" />

    <EditText
        android:id="@+id/edt_option5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/option_5"
        android:inputType="textPersonName"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/edt_option4"
        app:layout_constraintStart_toStartOf="@+id/edt_option4"
        app:layout_constraintTop_toBottomOf="@+id/edt_option4" />

    <TextView
        android:id="@+id/txt_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_correct_answer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toEndOf="@+id/edt_option1"
        app:layout_constraintTop_toTopOf="@+id/edt_option1"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spn_correct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/options"
        app:layout_constraintEnd_toEndOf="@+id/txt_display"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_display"
        app:layout_constraintTop_toBottomOf="@+id/txt_display" />

    <Button
        android:id="@+id/btn_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        app:layout_constraintBottom_toBottomOf="@+id/edt_option5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edt_option5"
        app:layout_constraintTop_toBottomOf="@+id/txt_display"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/edt_fact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:hint="Follow-up Fact"
        android:inputType="textPersonName"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edt_option3"
        app:layout_constraintTop_toBottomOf="@+id/spn_correct" />
</androidx.constraintlayout.widget.ConstraintLayout>